# Agentic-AI-Project-BDL

./: DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  MULTI_CLIENT_USAGE_GUIDE.md  OFFLINE_DEPLOYMENT.md  OFFLINE_IMPLEMENTATION.md  QUICK_START.md  README.md  README_docker_offline.md  README_ollama_offline.md  TOOL_ARCHITECTURE.md  auto_setup.py  comprehensive_test.py  configure_cpu_mode.sh  create_sample_excel.py  deploy.sh  dev.py  direct_test.py  final_demo.py  install-nvidia-docker.sh  main.py  package_docker_offline.sh  project_summary.py  pyproject.toml  requirements.txt  setup-dev.py  setup-gpu.sh  simple_test.py  test_clear_context.py  test_cpu_mode.py  test_document_flow.py  test_tensorrt_connection.py  test_tensorrt_doc_agent.py  validate-offline.sh
additional_packages/: langchain_community-0.3.25-py3-none-any.whl  langchain_core-0.3.65-py3-none-any.whl  langgraph-0.4.8-py3-none-any.whl  langgraph_prebuilt-0.2.2-py3-none-any.whl
backend/: api_server.py  main.py
config/: app_config.py
database/: agentic_assistant.db  db_manager.py  init_db.py  models.py  test.ipynb
deployment/: Dockerfile.backend  Dockerfile.backend-offline  Dockerfile.backend-proxy  Dockerfile.backend-proxy-offline  Dockerfile.frontend  Dockerfile.frontend-offline  docker-compose.client-server-offline.yml  docker-compose.client-server.yml  docker-compose.main-server-gpu-legacy.yml  docker-compose.main-server-gpu-offline.yml  docker-compose.main-server-gpu-simple.yml  docker-compose.main-server-gpu.yml  docker-compose.main-server.yml
frontend/: app.py  client_app.py  (+1 more)
(+36 files in other folders)
