[project]
name = "intern-task-bdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langgraph>=0.0.20",
    "numpy>=1.26.1",
    "ollama>=0.1.6",
    "openpyxl>=3.1.2",
    "pandas>=2.1.2",
    "pydantic>=2.4.2",
    "pymupdf>=1.23.7",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "streamlit>=1.28.0",
    "transformers>=4.35.0",
    "watchdog>=3.0.0",
]
